--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,32 @@
-name: Deploy
+name: CI/CD Pipeline
 on:
   push:
-    branches: main
+    branches:
+      - '**'
   pull_request:
-    branches: main
+    # preview環境へデプロイされる
+    branches:
+      - main
 
 jobs:
-  deploy:
-    name: Deploy
+  ci:
+    name: Run CI
     runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
+      - name: Check
+        run: deno task check
+
+  cd:
+    name: Run CD
+    runs-on: ubuntu-latest
+    needs: ci
+    if: github.ref == 'refs/heads/main'
 
     permissions:
       id-token: write # Needed for auth with Deno Deploy
