--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     name: Run CD
     runs-on: ubuntu-latest
     needs: ci
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.event.pull_request.base.ref == 'main'
 
     permissions:
       id-token: write # Needed for auth with Deno Deploy
@@ -47,6 +47,7 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
+          # Deno Deployのプロジェクト名を指定
           project: "lsadsfj-fresh-tutor-10"
           entrypoint: "main.ts"
           root: "."
