add sample test

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "lock": false,
   "tasks": {
-    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+    "test": "deno test --parallel",
+    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx && deno task test",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
     "start": "deno run -A --watch=static/,routes/ dev.ts",
